manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moira-rocks-__CI_ENVIRONMENT_SLUG__
  labels:
    app: moira-rocks
    ref: __CI_ENVIRONMENT_SLUG__
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moira-rocks
      ref: __CI_ENVIRONMENT_SLUG__
  template:
    metadata:
      labels:
        app: moira-rocks
        ref: __CI_ENVIRONMENT_SLUG__
        track: stable
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - name: app
        image: __CI_REGISTRY_IMAGE__:__VERSION__
        imagePullPolicy: Always
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 2
