manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moira-rocks-__CI_ENVIRONMENT_SLUG__
  namespace: moira-rocks
  labels:
    app: moira-rocks
    ref: __CI_ENVIRONMENT_SLUG__
  annotations:
    prometheus.io/scrape: "false"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: moira-rocks
    ref: __CI_ENVIRONMENT_SLUG__
