manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moira-rocks-__CI_ENVIRONMENT_SLUG__
  labels:
    app: moira-rocks
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  tls:
  - hosts:
    - dev.moira.rocks
    secretName: tls-wildcard-edenmal-net
  rules:
  - host: dev.moira.rocks
    http:
      paths:
      - path: /__CI_ENVIRONMENT_SLUG__
        backend:
          serviceName: moira-rocks-__CI_ENVIRONMENT_SLUG__
          servicePort: 8000
